main/default/objects/UW_Analysis__c/UW_Analysis__c.object-meta.xml
<CustomObject>
    <label>UW Analysis</label>
    <nameField>
        <displayFormat>UWA-{0000}</displayFormat>
        <label>UW Analysis</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UW Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>