main/default/objects/UW_Analysis__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>D&amp;C Turnover Split</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Design &amp; Construct</fullName>
            </value>
            <value>
                <fullName>Engineers</fullName>
            </value>
            <value>
                <fullName>Insurance Brokers</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Property Professionals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>