main/default/objects/UW_Analysis__c/fields/Notional_Income__c.field-meta.xml
<CustomField>
    <fullName>Notional_Income__c</fullName>
    <label>Notional Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>