main/default/objects/UW_Analysis__c/fields/Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Percentage__c</fullName>
    <label>Split Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>