main/default/objects/UW_Analysis__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>UW Analysis</relationshipLabel>
    <relationshipName>UW_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>