main/default/objects/UW_Analysis__c/fields/UW_Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>UW_Analysis_Code__c</fullName>
    <label>UW Analysis Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>