main/default/objects/UW_Analysis__c/fields/UW_Analysis_Name__c.field-meta.xml
<CustomField>
    <fullName>UW_Analysis_Name__c</fullName>
    <label>UW Analysis Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>