main/default/objects/UW_Analysis__c/fields/UW_Analysis_Template__c.field-meta.xml
<CustomField>
    <fullName>UW_Analysis_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UW Analysis Template</label>
    <referenceTo>UW_Analysis_Template__c</referenceTo>
    <relationshipLabel>UW Analysis</relationshipLabel>
    <relationshipName>UW_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>