main/default/objects/UW_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UW_Analysis_Name__c</columns>
    <columns>UW_Analysis_Template__c</columns>
    <columns>Amount__c</columns>
    <columns>Rating_Factor__c</columns>
    <columns>Split_Percentage__c</columns>
    <columns>Submission__c</columns>
    <columns>UW_Analysis_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>